--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,50 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+; [env:esp32dev]
+; platform = espressif32
+; board = esp32dev
+; framework = arduino
+; lib_deps =
+; 	https://github.com/me-no-dev/ESPAsyncWebServer.git
+; 	bblanchon/ArduinoJson@^6.19.4
+; monitor_speed = 115200
+; ; extra_scripts = upload.py
+; ; upload_protocol = custom
+; ; upload_url = http://192.168.178.101/update
+[default]
+build_flags =
+    -Isrc
+    -Iinclude
+    -Ilib
+
+[env:d1_mini]
+platform = espressif8266
+board = d1_mini
 framework = arduino
 lib_deps =
+;	arduino-libraries/WiFi@^1.2.7
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	bblanchon/ArduinoJson@^6.19.4
 monitor_speed = 115200
 ; extra_scripts = upload.py
 ; upload_protocol = custom
 ; upload_url = http://192.168.178.101/update
+board_build.f_cpu = 80000000L
+
+;[env:nodemcuv2]	 
+; board = nodemcuv2
+; platform = espressif8266
+; framework = arduino
+; build_type = debug
+; monitor_filters = esp8266_exception_decoder
+; lib_deps = 
+; 	https://github.com/me-no-dev/ESPAsyncWebServer.git
+; 	https://github.com/vshymanskyy/Preferences.git
+; 	bblanchon/ArduinoJson@^6.21.1
+; monitor_speed = 115200
+; extra_scripts = upload.py
+; upload_protocol = custom
+; upload_url = http://obergransad.lan/update
+; ; change MCU frequency
+; board_build.f_cpu = 80000000L
